[package]
name = "retread"
version = "0.1.0"
edition = "2021"
authors = ["Pil Eghoff <pil@gmail.com>"]
license = "GPL-2.0"
description = "Retread is a debug adapter that allows you to replay log files in your IDE or editor of choice"
homepage = "https://github.com/pileghoff/retread/"
repository = "https://github.com/pileghoff/retread/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
log-panics = { version = "2", features = ["with-backtrace"]}
dap = "0.3.1-alpha1"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.*"
glob = "0.3.1"
regex = "1.9"
thiserror = "1.0"
lcs = "0.2.0"
rayon = "1.7.0"
lazy_static = "1.4.0"
crossbeam = "0.8.2"
moka = "0.11"

[features]
default = []
test-server = []

[[bin]]
name = "integration_test"
path = "src/test.rs"
required-features = ["test-server"]